--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,10 @@
 @import "./resets";
+@import "./_variables";
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 body {
   scroll-behavior: smooth;
   font-size: 62.5%;
+  font-family: "Questrial", sans-serif;
 }
 .main {
   height: 100%;
@@ -22,7 +25,7 @@ body {
       }
     }
     ul {
-      color: gray;
+      color: $brownish-color;
       li {
         font-size: 18px;
         text-decoration: none;
@@ -37,9 +40,10 @@ body {
     }
   }
   .tagline {
-    font-size: 50px;
+    font-size: 80px;
+    font-weight: 150%;
     text-align: center;
-    color: #463232;
+    color: $brownish-color;
   }
 }
 .slider_text {
@@ -49,34 +53,37 @@ body {
   justify-content: left;
   ul {
     list-style: none;
+    li {
+      margin-bottom: 50px;
+    }
   }
 
   .left-paragraph {
-    font-size: 15px;
-    max-width: 300px;
+    font-size: 18px;
+    max-width: 400px;
   }
   .search {
-    margin-top: 10px;
     display: flex;
     justify-content: space-between;
     background-color: white;
     padding: 10px 10px;
+    max-width: 300px;
   }
   input {
     border: none;
   }
   .search-btn {
     border: none;
-    background-color: #463232;
+    background-color: $brownish-color;
     padding: 7px;
     color: white;
   }
   .detail-btn {
-    margin-top: 30px;
     padding: 10px 30px;
     border: none;
-    background-color: #463232;
+    background-color: $brownish-color;
     color: white;
+    box-shadow: 0px 40px 60px -10px black;
   }
 }
 .slider-right-pragraph {
@@ -84,14 +91,14 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
-  margin-right: 280px;
-  margin-top: -120px;
-  font-size: 14px;
+  margin-right: 200px;
+  margin-top: -250px;
+  font-size: 18px;
   p {
-    color: gray;
+    color: $brownish-color;
   }
   strong {
-    color: black;
+    color: $brownish-color;
   }
 }
 .social-media-icon {
@@ -109,19 +116,22 @@ body {
 
       i {
         font-size: 20px;
-        color: gray;
+        color: $brownish-color;
       }
     }
   }
 }
 .lenders {
-  background-color: pink;
+  background-color: $pink;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 40px;
+  padding-top: 30px;
   h2 {
-    margin: 20px;
+    margin: 30px 0;
+    font-size: 25px;
   }
   .lender-logo {
     margin: 0 auto;
@@ -152,16 +162,20 @@ body {
     }
     h1 {
       font-size: 60px;
+      color: $brownish-color;
     }
     p {
       font-size: 20px;
+      color: $gray;
     }
     button {
-      font-size: 15px;
-      padding: 10px 60px;
+      padding: 15px 60px;
       display: block;
       border: none;
-      background-color: red;
+      color: white;
+      font-size: 18px;
+      background-color: $brownish-color;
+      box-shadow: 0px 40px 60px -10px black;
     }
   }
   .about-us-right {
@@ -175,12 +189,14 @@ body {
     p {
       font-size: 20px;
       max-width: 400px;
+      color: $gray;
     }
     button {
-      font-size: 15px;
-      padding: 10px 60px;
+      font-size: 18px;
+      padding: 15px 60px;
       display: block;
-      border: 1px solid black;
+      background-color: white;
+      border: 1px solid $brownish-color;
     }
   }
 }
@@ -188,13 +204,18 @@ body {
   margin-top: 40px;
 
   h1 {
+    color: $brownish-color;
     text-align: center;
-    font-size: 60px;
+    font-size: 80px;
+    margin-bottom: 20px;
   }
   p {
     text-align: center;
     font-size: 20px;
     margin-bottom: 30px;
+    color: $gray;
+    margin-bottom: 60px;
+    line-height: 1.6;
   }
 }
 .product_sample {
@@ -204,20 +225,310 @@ body {
   margin-right: 35px;
 
   img {
-    width: 70%;
+    width: 80%;
     display: block;
     margin: 0 auto;
   }
   p {
-    width: 70%;
+    width: 80%;
     display: block;
     margin: 0 auto;
     text-align: left;
+    color: $gray;
+    line-height: 1.6;
   }
   h1 {
-    width: 70%;
+    width: 80%;
+    font-size: 50px;
     display: block;
-    margin: 0 auto;
+    margin: 20px auto;
     text-align: left;
+    color: $brownish-color;
   }
+  .statistics {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+
+    .item-number {
+      text-align: center;
+      width: 45%;
+      color: $blue-green;
+      font-size: 30px;
+      font-weight: bold;
+      border-bottom: $brownish-color solid 2px;
+      margin-bottom: 10px;
+    }
+    .item-discription {
+      font-size: 18px;
+      width: 100%;
+      text-align: center;
+      margin-right: 30px;
+      margin-bottom: 40px;
+      color: $gray;
+    }
+  }
+}
+.item-btn {
+  margin-left: 60px;
+  margin-bottom: 80px;
+
+  .buy {
+    color: white;
+    font-size: 18px;
+    background-color: $brownish-color;
+    box-shadow: 0px 40px 60px -10px black;
+    padding: 15px 60px;
+    margin-right: 30px;
+  }
+  .cart {
+    color: $brownish-color;
+    font-size: 18px;
+    background-color: white;
+    border: 1px solid $brownish-color;
+    padding: 15px 60px;
+    margin-right: 30px;
+  }
+}
+.general-stat {
+  background-color: $light-pink;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .general-stat-sec {
+    padding: 30px 150px;
+    text-align: center;
+    border-right: 1px solid black;
+    .general-stat-number {
+      color: $brownish-color;
+      font-size: 40px;
+      font-weight: bold;
+    }
+    .general-stat-discription {
+      font-size: 20px;
+      color: $gray;
+    }
+  }
+  .general-stat-sec-exception {
+    padding: 30px 150px;
+    text-align: center;
+    .general-stat-number {
+      color: $brownish-color;
+      font-size: 40px;
+      font-weight: bold;
+    }
+    .general-stat-discription {
+      font-size: 20px;
+      color: $gray;
+    }
+  }
+}
+.shop {
+  margin: 80px 120px;
+
+  display: flex;
+  flex-direction: row;
+
+  .shop-image {
+    img {
+      width: 500px;
+    }
+  }
+  .shop-info {
+    margin-top: 50px;
+    margin-left: 100px;
+    .title {
+      font-size: 60px;
+      color: $brownish-color;
+      margin-bottom: 40px;
+    }
+    .disc {
+      font-size: 17px;
+      color: $gray;
+      margin-bottom: 40px;
+      line-height: 2;
+    }
+    button {
+      padding: 15px 60px;
+      display: block;
+      border: none;
+      color: white;
+      font-size: 18px;
+      background-color: $brownish-color;
+      box-shadow: 0px 40px 60px -10px black;
+    }
+  }
+}
+.custumer-feedback {
+  background-color: $light-pink;
+  padding-bottom: 10px;
+
+  .custumer-note {
+    margin-top: 100px;
+    text-align: center;
+    .feedback-heading {
+      margin-top: 60px;
+      padding-top: 80px;
+      font-size: 60px;
+      font-weight: bold;
+      color: $brownish-color;
+    }
+    .feedback-paragraph {
+      margin-top: 20px;
+      font-size: 20px;
+      margin-bottom: 60px;
+      color: $gray;
+    }
+  }
+  .customers {
+    display: flex;
+    flex-direction: row;
+    margin: 0 50px;
+    justify-content: space-between;
+    margin-bottom: 100px;
+    .exception-custumer {
+      background-color: white;
+      margin: 30px;
+      padding: 10px 40px;
+      box-shadow: 0px 40px 60px -10px black;
+
+      .star {
+        position: relative;
+        left: -90px;
+        top: 0px;
+        color: $star;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        font-size: 14px;
+      }
+      .statment {
+        font-size: 18px;
+        text-align: left;
+        margin-bottom: 30px;
+        color: black;
+        line-height: 1.6;
+      }
+      .customer-picture {
+        margin-top: 30px;
+        position: relative;
+        left: -100px;
+
+        img {
+          width: 70px;
+          height: 70px;
+          border-radius: 50%;
+        }
+      }
+    }
+    .each-custumer {
+      background-color: white;
+      margin: 30px;
+      padding: 10px 40px;
+      .star {
+        position: relative;
+        left: -100px;
+        top: 0px;
+        color: $star;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        font-size: 14px;
+      }
+      .statment {
+        font-size: 18px;
+        text-align: left;
+        margin-bottom: 30px;
+        color: $gray;
+        line-height: 1.6;
+      }
+      .customer-picture {
+        margin-top: 30px;
+        position: relative;
+        left: -100px;
+
+        img {
+          width: 70px;
+          height: 70px;
+          border-radius: 50%;
+        }
+      }
+    }
+    .customer-title {
+      position: relative;
+      top: -50px;
+      font-size: 15px;
+
+      .customer-position {
+        color: gray;
+      }
+    }
+  }
+}
+.footer {
+  display: flex;
+  flex-direction: row;
+  margin-left: 50px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  .about-wilding {
+    .heading {
+      font-size: 32px;
+      font-weight: bold;
+      color: $brownish-color;
+      margin-bottom: 20px;
+    }
+    .about-wilding-note {
+      color: $gray;
+      font-size: 22px;
+      line-height: 1.4;
+      width: 65%;
+      margin-bottom: 50px;
+    }
+    .social-media {
+      ul {
+        list-style: none;
+
+        li {
+          display: inline;
+          margin-right: 10px;
+          i {
+            font-size: 16px;
+            background-color: $brownish-color;
+            color: white;
+            border-radius: 50%;
+            padding: 15px;
+          }
+        }
+      }
+    }
+  }
+  .footer_menue {
+    display: flex;
+    flex-direction: row;
+    .menu-items {
+      margin-right: 150px;
+      ul {
+        list-style: none;
+        li {
+          margin-bottom: 16px;
+          font-size: 18px;
+          color: $gray;
+          width: 120px;
+          .menu-heading {
+            font-size: 26px;
+            font-weight: bold;
+            color: $brownish-color;
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+  }
+}
+.copyright {
+  text-align: center;
+  color: $gray;
+  font-size: 16px;
+  margin: 20px;
 }
